--- a/Claims_Fraud_Classi_PrPr.ipynb
+++ b/Claims_Fraud_Classi_PrPr.ipynb
@@ -1841,86 +1841,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": null,
    "id": "26e0a320",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:snowflake.snowpark._internal.udf_utils:Got error object of type 'NoneType' has no len() when trying to read default values from function: <class 'snowflake.ml.modeling.metrics.classification._register_confusion_matrix_computer.<locals>.ConfusionMatrixComputer'>. Proceeding without creating optional arguments\n",
-      "WARNING:snowflake.snowpark._internal.udf_utils:Got error object of type 'NoneType' has no len() when trying to read default values from function: <class 'snowflake.ml.modeling.metrics.metrics_utils.register_accumulator_udtf.<locals>.Accumulator'>. Proceeding without creating optional arguments\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calculating build time metrics\n",
-      "\n",
-      "Progress: ██████████████                                                         20.0%\n",
-      "Calculating build time metrics\n",
-      "\n",
-      "Progress: ████████████████████████████                                           40.0%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:snowflake.snowpark._internal.udf_utils:Got error object of type 'NoneType' has no len() when trying to read default values from function: <class 'snowflake.ml.modeling.metrics.classification._register_multilabel_confusion_matrix_computer.<locals>.MultilabelConfusionMatrixComputer'>. Proceeding without creating optional arguments\n",
-      "WARNING:snowflake.snowpark.session:The version of package 'scikit-learn' in the local environment is 1.3.2, which does not fit the criteria for the requirement 'scikit-learn<1.4'. Your UDF might not work when the package version is different between the server and your local environment.\n",
-      "WARNING:snowflake.snowpark._internal.udf_utils:Got error object of type 'NoneType' has no len() when trying to read default values from function: <class 'snowflake.ml.modeling.metrics.classification._register_multilabel_confusion_matrix_computer.<locals>.MultilabelConfusionMatrixComputer'>. Proceeding without creating optional arguments\n",
-      "WARNING:snowflake.snowpark.session:The version of package 'scikit-learn' in the local environment is 1.3.2, which does not fit the criteria for the requirement 'scikit-learn<1.4'. Your UDF might not work when the package version is different between the server and your local environment.\n",
-      "WARNING:snowflake.snowpark._internal.udf_utils:Got error object of type 'NoneType' has no len() when trying to read default values from function: <function roc_auc_score.<locals>.roc_auc_score_anon_sproc at 0x7fceec2503a0>. Proceeding without creating optional arguments\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calculating build time metrics\n",
-      "\n",
-      "Progress: ██████████████████████████████████████████                             60.0%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:snowflake.snowpark.session:The version of package 'scikit-learn' in the local environment is 1.3.2, which does not fit the criteria for the requirement 'scikit-learn==1.3.*'. Your UDF might not work when the package version is different between the server and your local environment.\n",
-      "WARNING:snowflake.snowpark.session:The version of package 'snowflake-snowpark-python' in the local environment is 1.21.0, which does not fit the criteria for the requirement 'snowflake-snowpark-python'. Your UDF might not work when the package version is different between the server and your local environment.\n",
-      "WARNING:snowflake.snowpark._internal.udf_utils:Got error object of type 'NoneType' has no len() when trying to read default values from function: <function roc_curve.<locals>.roc_curve_anon_sproc at 0x7fceec5bb700>. Proceeding without creating optional arguments\n",
-      "WARNING:snowflake.snowpark.session:The version of package 'scikit-learn' in the local environment is 1.3.2, which does not fit the criteria for the requirement 'scikit-learn==1.3.*'. Your UDF might not work when the package version is different between the server and your local environment.\n",
-      "WARNING:snowflake.snowpark.session:The version of package 'snowflake-snowpark-python' in the local environment is 1.21.0, which does not fit the criteria for the requirement 'snowflake-snowpark-python'. Your UDF might not work when the package version is different between the server and your local environment.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Calculating build time metrics\n",
-      "\n",
-      "Progress: ████████████████████████████████████████████████████████               80.0%\n",
-      "Calculating build time metrics\n",
-      "\n",
-      "Progress: ██████████████████████████████████████████████████████████████████████ 100.0%\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\"Model 'MODEL_4CAC9B7E_5794_4BA1_8E11_719ABA32ECA5_FDC_CLAIMS_FRAUD_DTREE_CLASSIFIER' registered successfully.\""
-      ]
-     },
-     "execution_count": 526,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## registering the model in Fosfor Insight Designer.\n",
     "register_model(\n",
@@ -1935,8 +1861,8 @@
     "    dataset_name=\"AUTO_INSURANCE_CLAIMS_DATA\",\n",
     "    dataset_source=\"Snowflake\",\n",
     "    #dataset_source=\"InMemory\",\n",
-    "    name=\"Claims_Fraud_DTree_Classifier\",\n",
-    "    description=\"Insurance claims model trained for Fraud Classification\",\n",
+    "    name=\"Decision_Tree_Claim_Classifier\",\n",
+    "    description=\"Decision tree model trained via Notebook to identify fraud claim application\",\n",
     "    flavour=\"sklearn\",\n",
     "    model_type=\"classification\",\n",
     "    conda_dependencies=[\"scikit-learn==1.3.2\"]\n",
