--- a/Claims_Fraud_Classi_PrPr.ipynb
+++ b/Claims_Fraud_Classi_PrPr.ipynb
@@ -2080,7 +2080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "73fbd7da",
    "metadata": {},
    "outputs": [
@@ -2146,6 +2146,16 @@
       "\n",
       "Progress: ██████████████████████████████████████████████████████████████████████ 100.0%\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"Model 'MODEL_0309078C_6F8E_4796_BF18_3789B23539DF_FDC_DECISION_TREE_CLAIM_CLASSIFIER' registered successfully.\""
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
