--- a/Claim_Amount_Regressor_Training_And_Registration.ipynb
+++ b/Claim_Amount_Regressor_Training_And_Registration.ipynb
@@ -5,7 +5,7 @@
    "id": "5b2b84af",
    "metadata": {},
    "source": [
-    "## Use Insurance Code Template Notebook Template"
+    "## Use Customized Notebook Template (CLAIMS_RESERVE_Template)"
    ]
   },
   {
@@ -32,19 +32,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4871a0ed",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connection manager service url initialised to http://fdc-project-manager:80/project-manager\n",
-      "If you need to update its value then update the variable CONNECTION_MANAGER_BASE_URL in os env.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from snowflake.snowpark import Session\n",
     "from snowflake.ml.modeling.pipeline import Pipeline\n",
@@ -1044,7 +1035,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1058,7 +1049,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
