--- a/Claim_Amount_Regressor_Training_And_Registration.ipynb
+++ b/Claim_Amount_Regressor_Training_And_Registration.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "c7d5eb6f",
    "metadata": {},
    "outputs": [],
@@ -209,6 +209,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "4d313dc3-3497-4e26-bf73-6b0c06ec3da4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(snowflake.snowpark.dataframe.DataFrame,\n",
+       " snowflake.snowpark.dataframe.DataFrame,\n",
+       " snowflake.snowpark.dataframe.DataFrame)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(train_df), type(test_df), type(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "id": "5c4d5612",
    "metadata": {},
@@ -225,9 +248,9 @@
     }
    ],
    "source": [
-    "from joblib import dump, load\n",
-    "filename = \"Claims_Snowpark_XGB_Regression.joblib\" #Model version 1\n",
-    "dump(pipeline, 'model_artifacts/' + filename)"
+    "#from joblib import dump, load\n",
+    "#filename = \"Claims_Snowpark_XGB_Regression.joblib\" #Model version 1\n",
+    "#dump(pipeline, 'model_artifacts/' + filename)"
    ]
   },
   {
@@ -237,12 +260,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = load('model_artifacts/' + filename)"
+    "#model = load('model_artifacts/' + filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "id": "79fac1af",
    "metadata": {},
    "outputs": [],
