--- a/Claim_Amount_Regressor_Training_And_Registration.ipynb
+++ b/Claim_Amount_Regressor_Training_And_Registration.ipynb
@@ -232,39 +232,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "5c4d5612",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Claims_Snowpark_XGB_Regression.joblib']"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#from joblib import dump, load\n",
-    "#filename = \"Claims_Snowpark_XGB_Regression.joblib\" #Model version 1\n",
-    "#dump(pipeline, 'model_artifacts/' + filename)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "3b78e64f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#model = load('model_artifacts/' + filename)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 34,
    "id": "79fac1af",
    "metadata": {},
@@ -278,35 +245,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "b1c944a3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@scoring_func\n",
-    "def score(model, request):\n",
-    "    payload_dict = request.json[\"payload\"]\n",
-    "    data = pd.DataFrame(payload_dict,index=[0])\n",
-    "    data = data.replace(np.nan, pd.isna)\n",
-    "    data[\"AUTO_YEAR\"] = data[\"AUTO_YEAR\"].astype(str)\n",
-    "    prediction = str(model.predict(data)[\"PREDICTION\"][0])\n",
-    "    return prediction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "b3017730",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred = model.predict(test)\n",
-    "test[\"PREDICTION\"] = pred[\"PREDICTION\"]"
+    "pred = pipeline.predict(test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "id": "9b030bd1",
    "metadata": {},
    "outputs": [],
@@ -322,86 +271,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "5bf30c30",
+   "execution_count": 39,
+   "id": "52ea8f65-5cae-484c-81ae-0ccd5284ed3e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'POLICY_DEDUCTABLE': 809,\n",
-       " 'POLICY_ANNUAL_PREMIUM': 1064,\n",
-       " 'INCIDENT_TYPE': 'Single Vehicle Collision',\n",
-       " 'COLLISION_TYPE': 'Rear Collision',\n",
-       " 'INCIDENT_SEVERITY': 'Major Damage',\n",
-       " 'NUMBER_OF_VEHICLES_INVOLVED': 1,\n",
-       " 'PROPERTY_DAMAGE': 'Property Damage',\n",
-       " 'BODILY_INJURIES': 2,\n",
-       " 'AUTO_MAKE': 'Accura',\n",
-       " 'AUTO_MODEL': 'MDX',\n",
-       " 'AUTO_YEAR': '1997'}"
+       "(pandas.core.frame.DataFrame,\n",
+       " pandas.core.frame.DataFrame,\n",
+       " pandas.core.series.Series,\n",
+       " pandas.core.series.Series,\n",
+       " pandas.core.series.Series)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "payload  = test.iloc[0].to_dict()\n",
-    "del payload[\"TOTAL_CLAIM_AMOUNT_PAID\"]\n",
-    "del payload[\"PREDICTION\"]\n",
-    "payload"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "a4a60820",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'74180.48'"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "req = requests.Request()\n",
-    "req.json = {\"payload\":payload}\n",
-    "y_req = req\n",
-    "y_out = score(model, y_req)\n",
-    "y_out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "6248d1cb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## SAMPLE PAYLOAD\n",
-    "data = {\n",
-    "  \"payload\": {\n",
-    "    \"POLICY_DEDUCTABLE\": 500,\n",
-    "    \"POLICY_ANNUAL_PREMIUM\": 938,\n",
-    "    \"INCIDENT_TYPE\": \"Vehicle Theft\",\n",
-    "    \"COLLISION_TYPE\": \"Details not Available\",\n",
-    "    \"INCIDENT_SEVERITY\": \"Total Loss\",\n",
-    "    \"NUMBER_OF_VEHICLES_INVOLVED\": 1,\n",
-    "    \"PROPERTY_DAMAGE\": \"Property Damage\",\n",
-    "    \"BODILY_INJURIES\": 0,\n",
-    "    \"AUTO_MAKE\": \"Honda\",\n",
-    "    \"AUTO_MODEL\": \"Civic\",\n",
-    "    \"AUTO_YEAR\": \"2002\"\n",
-    "  }\n",
-    "}"
+    "type(X_train), type(X_test), type(y_train), type(y_test), type(y_pred)"
    ]
   },
   {
