--- a/Claim_Amount_Regressor_Training_And_Registration.ipynb
+++ b/Claim_Amount_Regressor_Training_And_Registration.ipynb
@@ -296,6 +296,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a48ca8bd-a9bc-4e89-856d-aa9071d66e85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## registering the model in Fosfor Insight Designer.\n",
+    "register_model(\n",
+    "    model_obj=pipeline, \n",
+    "    session=my_session,\n",
+    "    x_train=X_train,\n",
+    "    y_train=y_train,\n",
+    "    x_test=X_test,\n",
+    "    y_test=y_test,\n",
+    "    y_pred=y_pred,\n",
+    "    source=\"Notebook\",\n",
+    "    dataset_name=\"AUTO_INSURANCE_CLAIMS_DATA\",\n",
+    "    dataset_source=\"Snowflake\",\n",
+    "    #dataset_source=\"InMemory\",\n",
+    "    name=\"XGBoost_Claim_predictor\",\n",
+    "    description=\"XGBoost model trained via Notebook to predict claim amount\",\n",
+    "    flavour=\"snowflake\",\n",
+    "    model_type=\"regression\",\n",
+    "    conda_dependencies=[\"scikit-learn==1.3.2\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 37,
    "id": "6ce34b9f",
    "metadata": {},
