--- a/Claim_Amount_Regressor_Training_And_Registration.ipynb
+++ b/Claim_Amount_Regressor_Training_And_Registration.ipynb
@@ -271,12 +271,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "52ea8f65-5cae-484c-81ae-0ccd5284ed3e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(pandas.core.frame.DataFrame,\n",
+       " pandas.core.frame.DataFrame,\n",
+       " pandas.core.series.Series,\n",
+       " pandas.core.series.Series,\n",
+       " pandas.core.series.Series,\n",
+       " snowflake.snowpark.dataframe.DataFrame)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "type(X_train), type(X_test), type(y_train), type(y_test), type(y_pred), type(pred)"
+    "type(X_train), type(X_test), type(y_train), type(y_test), type(y_pred), type(result)"
    ]
   },
   {
@@ -292,19 +308,41 @@
    "execution_count": null,
    "id": "06c91c31-9286-477f-943a-4186aa573aee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating build time metrics\n",
+      "\n",
+      "Progress: ██████████████████                                                     25.0%\n",
+      "(0000) Length of multilabel label columns should be of the same between y_true_col_names and y_pred_col_names.Got y_true_col_names=['PREDICTION'] (length: 1) vs y_pred_col_names=['INCIDENT_TYPE', 'COLLISION_TYPE', 'INCIDENT_SEVERITY', 'PROPERTY_DAMAGE', 'AUTO_MAKE', 'AUTO_MODEL', 'AUTO_YEAR'] (length: 7).\n",
+      "(0000) Length of multilabel label columns should be of the same between y_true_col_names and y_pred_col_names.Got y_true_col_names=['PREDICTION'] (length: 1) vs y_pred_col_names=['INCIDENT_TYPE', 'COLLISION_TYPE', 'INCIDENT_SEVERITY', 'PROPERTY_DAMAGE', 'AUTO_MAKE', 'AUTO_MODEL', 'AUTO_YEAR'] (length: 7).\n",
+      "(0000) Length of multilabel label columns should be of the same between y_true_col_names and y_pred_col_names.Got y_true_col_names=['PREDICTION'] (length: 1) vs y_pred_col_names=['INCIDENT_TYPE', 'COLLISION_TYPE', 'INCIDENT_SEVERITY', 'PROPERTY_DAMAGE', 'AUTO_MAKE', 'AUTO_MODEL', 'AUTO_YEAR'] (length: 7).\n",
+      "(0000) Length of multilabel label columns should be of the same between y_true_col_names and y_pred_col_names.Got y_true_col_names=['PREDICTION'] (length: 1) vs y_pred_col_names=['INCIDENT_TYPE', 'COLLISION_TYPE', 'INCIDENT_SEVERITY', 'PROPERTY_DAMAGE', 'AUTO_MAKE', 'AUTO_MODEL', 'AUTO_YEAR'] (length: 7).\n",
+      "Error in while calculating detailed_matrix \n",
+      "Calculating build time metrics\n",
+      "\n",
+      "Progress: ███████████████████████████████████                                    50.0%\n",
+      "Calculating build time metrics\n",
+      "\n",
+      "Progress: ████████████████████████████████████████████████████                   75.0%\n"
+     ]
+    }
+   ],
    "source": [
     "register_model(\n",
     "  model_obj=pipeline,\n",
     "  session=my_session,\n",
     "  name=\"XGBoost_Claim_predictor\",\n",
-    "  snowflake_df=pred,\n",
-    "  dataset_name=\"HR_CHURN\",\n",
-    "  dataset_source=\"Dataset\",\n",
+    "  snowflake_df=result,\n",
+    "  target_column=\"PREDICTION\",\n",
+    "  dataset_name=\"AUTO_INSURANCE_CLAIMS_DATA\",\n",
+    "  dataset_source=\"Snowflake\",\n",
     "  source=\"Notebook\",\n",
-    "  description=\"This is a Snowflake model\",\n",
+    "  description=\"XGBoost model trained via Notebook to predict claim amount\",\n",
     "  flavour=\"snowflake\",\n",
-    "  model_type=\"classification\",\n",
+    "  model_type=\"regression\",\n",
     "  conda_dependencies=[\"scikit-learn==1.3.2\"]\n",
     ")"
    ]
