--- a/Claim_Amount_Regressor_Training_And_Registration.ipynb
+++ b/Claim_Amount_Regressor_Training_And_Registration.ipynb
@@ -296,12 +296,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74f87572-695e-4a91-8142-3a21a15991ef",
+   "cell_type": "markdown",
+   "id": "950343f0-3a27-4e7f-94b6-9cfc7294a6d1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Register Snowflake Model using FosforML"
+   ]
   },
   {
    "cell_type": "code",
