--- a/Claims_DataVisualization.ipynb
+++ b/Claims_DataVisualization.ipynb
@@ -5,35 +5,7 @@
    "id": "899ff111",
    "metadata": {},
    "source": [
-    "# Use Insurance Code Template Notebook template"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "26441280",
-   "metadata": {},
-   "source": [
-    "# Packages needed to run this notebook if running with inbuilt snowpark 3.8 template\n",
-    "#### !pip install --q \"snowflake-connector-python[pandas]\"\n",
-    "#### !sudo pip install --q  snowflake-ml-python==1.0.11 -U\n",
-    "#### !pip install --upgrade --q snowflake-snowpark-python==1.9.0\n",
-    "#### !pip install --q seaborn\n",
-    "#### !pip install --q plotly \n",
-    "#### !pip install --upgrade --q xgboost==1.7.3\n",
-    "#### !pip install --upgrade --q numpy==1.24.3\n",
-    "#### !pip install --upgrade --q pandas==1.5.3\n",
-    "#### !pip install --q statsmodels\n",
-    "#### !pip install --q fosforio"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "e8723aae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!pip install --q statsmodels"
+    "# Use Customized Notebook Template (CLAIMS_RESERVE_Template)"
    ]
   },
   {
@@ -80,32 +52,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "03e713a8",
+   "execution_count": 1,
+   "id": "5be1a033-b492-4ef5-a008-c3e357cc8d6b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connection object created: <snowflake.connector.connection.SnowflakeConnection object at 0x7f9b741a0fd0>\n",
-      "Please close the connection after use!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<snowflake.connector.connection.SnowflakeConnection at 0x7f9b741a0fd0>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# To get snowflake connection object with a specific connection name\n",
-    "snowflake.get_connection(connection_name=\"FDC_Insurance_Snowflake\")"
+    "from fosforml.model_manager.snowflakesession import get_session\n",
+    "my_session = get_session()\n",
+    "\n",
+    "table_name = 'AUTO_INSURANCE_CLAIMS_DATA'\n",
+    "sf_df = my_session.sql(\"select * from {}\".format(table_name))\n",
+    "df = sf_df.to_pandas()"
    ]
   },
   {
@@ -115,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = snowflake.get_dataframe(\"AUTO_INSURANCE_CLAIMS_DATA_PRODUCT\")\n",
+    "#df = snowflake.get_dataframe(\"AUTO_INSURANCE_CLAIMS_DATA_PRODUCT\")\n",
     "insurance_claim = df.copy()"
    ]
   },
@@ -2311,7 +2268,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2325,7 +2282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
