--- a/Claims_Fraud_Classifier_Training.ipynb
+++ b/Claims_Fraud_Classifier_Training.ipynb
@@ -5,34 +5,7 @@
    "id": "ba363fbd",
    "metadata": {},
    "source": [
-    "# Use Insurance Code Template Notebook Template"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a0095b8d",
-   "metadata": {
-    "scrolled": false
-   },
-   "source": [
-    "## Packages needed to run this notebook if running with inbuilt snowpark 3.8 template\n",
-    "#### !pip install --q \"snowflake-connector-python[pandas]\"\n",
-    "#### !sudo pip install --q  snowflake-ml-python==1.0.11 -U\n",
-    "#### !pip install --upgrade --q snowflake-snowpark-python==1.9.0\n",
-    "#### !pip install --q seaborn\n",
-    "#### !pip install --upgrade --q xgboost==1.7.3\n",
-    "#### !pip install --upgrade --q numpy==1.24.3\n",
-    "#### !pip install --upgrade --q pandas==1.5.3\n",
-    "#### !pip install --upgrade --q anyio==3.5.0\n",
-    "#### !pip install --upgrade --q packaging==23.1\n",
-    "#### !pip install --upgrade --q scikit-learn==1.3.0\n",
-    "#### !pip install --upgrade --q typing-extensions==4.7.1\n",
-    "#### !pip install --upgrade --q cryptography==39.0.0\n",
-    "#### !pip install --upgrade --q fsspec==2023.9.2\n",
-    "#### !pip install --q xgboost\n",
-    "#### !pip install --q catboost\n",
-    "#### !pip install --q fosforio\n",
-    "#### !pip install --q fosforml"
+    "# Use Customized Notebook Template (CLAIMS_RESERVE_Template)"
    ]
   },
   {
@@ -85,10 +58,6 @@
     "from xgboost import XGBClassifier\n",
     "from catboost import CatBoostClassifier\n",
     "\n",
-    "# FosforIO to read from snowflake\n",
-    "from fosforio import snowflake\n",
-    "# FosforML to register Model on FDC\n",
-    "from joblib import dump, load\n",
     "from fosforml import *\n",
     "from fosforml.constants import MLModelFlavours\n",
     "import requests"
@@ -1995,7 +1964,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2009,7 +1978,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
